# petsctools

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  core.yml  pr.yml  push.yml  pypi.yml  release.yml
docs/: conf.py
docs/source/: conf.py  examples.rst  index.rst  modules.rst
docs/source/_static/cython-demo/: fast.pyx  setup.py  slow.py
petsctools/: __init__.py  appctx.py  citation.py  config.py  cpetsc.pxd  exceptions.py  init.py  monitor.py  options.py  pc.py  reasons.py  utils.py
tests/: conftest.py  test_appctx.py  test_config.py  test_options.py
