[project]
name = "petsctools"
version = "2025.5.0.dev0"
description = "Pythonic extensions for petsc4py and slepc4py"
readme = "README.md"
license = "GPL-3.0-or-later"
maintainers = [
  {name = "Connor J. Ward", email = "c.ward20@imperial.ac.uk"},
]
requires-python = ">=3.10"
dependencies = [
  "packaging",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Unix",
]

[project.optional-dependencies]
petsc4py = ["petsc4py"]
slepc4py = ["slepc4py"]

[project.urls]
Repository = "https://github.com/firedrakeproject/petsctools"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
